--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/ngx-toastr/toastr.css";
+
+body{
+  background-color: ghostwhite;
+}
+.titulo{
+  font-size: 1.8rem;
+  font-family: 'Montserrat',sans-serif;
+}
+.fas{
+  margin-left: 7px;
+}
